--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,13 @@
 
 * {
   box-sizing: border-box;
+  font-family: Inter;
 }
 
 body {
   margin: 0;
   padding: 0;
-  background-color: #1a1a1a;
+  background-color: #fff;
 }
 
 .app {
