Adding and mobile responsiveness and set up routing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,9 +18,11 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #fff;
+  background-color: #111111;
 }
 
 .app {
   margin: auto;
+  max-width: 1440px;
+  padding: 0 1.25rem;
 }
