--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,13 +13,13 @@
 
 * {
   box-sizing: border-box;
-  font-family: Inter;
+  font-family: Roboto;
 }
 
 body {
   margin: 0;
   padding: 0;
-  background-color: #111111;
+  background-color: #1a1a1a;
 }
 
 .app {
