--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,9 +20,13 @@ body {
   margin: 0;
   padding: 0;
   background-color: #1a1a1a;
+  height: 100vh;
 }
 
 .app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   margin: auto;
   max-width: 1440px;
   padding: 0 1.25rem;
