update responsiveness of product thumbnails

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -73,3 +73,7 @@ body {
 .cart--container {
   width: 100vw !important;
 }
+
+.product--thumbnail-container {
+  width: calc(100vw - 2rem) !important;
+}
