--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,8 @@ body {
   padding: 0;
   background-color: #1a1a1a;
   height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .app {
@@ -30,6 +32,7 @@ body {
   margin: auto;
   max-width: 1440px;
   padding: 0 1.25rem;
+  width: 100%;
 }
 
 .loadingSpinnerContainer {
