--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,7 @@
   --background: rgb(26, 26, 26);
   --primary: rgb(241 245 249);
   --primary200: rgb(226 232 240);
+  --subtitle: rgba(255,255,255,0.75);
   --secondary: rgb(13 13 13);
   --ctabutton: rgba(255, 255, 255, 0.302);
   --ctaborder: rgb(255, 255, 255, 0.302);
