--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,7 @@
   --background: rgb(26, 26, 26);
   --primary: rgb(241 245 249);
   --primary200: rgb(226 232 240);
-  --subtitle: rgba(255,255,255,0.75);
+  --subtitle: rgba(255, 255, 255, 0.75);
   --secondary: rgb(13 13 13);
   --ctabutton: rgba(255, 255, 255, 0.302);
   --ctaborder: rgb(255, 255, 255, 0.302);
@@ -23,6 +23,37 @@
 * {
   box-sizing: border-box;
   font-family: Roboto;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  height: 9px;
+  width: 9px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background-color: #dfe9eb;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #b8c0c2;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #b8c0c2;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 13px;
+  background-color: #696969;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #696969;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #696969;
 }
 
 body {
